Job Application for Data Scientist at LiveRamp. Job Application for Senior Data Scientist at DRW . 4Catalyzer Data Scientist | SmartRecruiters. Data Scientist - Momentum Solar - Career Page. Spry Squared, Inc. Data Scientist Manager | SmartRecruiters. Fanatics - Senior Data Scientist. Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science. Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science. Fanatics - Senior Data Scientist. Adam Kay Group Data Scientist | SmartRecruiters. Enterprise Account Exec- Data Science / ML -Paris - h2o.ai - Career Page. Enterprise Account Exec- Data Science / ML -London - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Toronto - h2o.ai - Career Page. Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page. Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds. Data Scientist - Apply online - Datatonic - Jobs. Jenzabar - Jobs: Data Scientist - Apply online. BL Consulting Co-op (Data Science & ML) - Nokia Careers. Job @ talpasolutions (Essen): Data Scientist | JOIN. Data Scientist - [Remote] - [United States] at Crisp Inc.. Data Scientist - [Remote] - [United States] at Crisp Inc.. Data Scientist/ Python and R Programmer Consultant - Inter .... Bird Careers - Director, Data Science. Bird Careers - Manager, Data Scientist. Mention - Jobs: Senior Data Scientist - Apply online. Lead Data Scientist - Apply ... - Hummingbird Technologies Ltd - Jobs. IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters. Sia Partners Consultant(e) Data Science | SmartRecruiters. UNC Greensboro Employment Opportunities | Data Scientist. Job Application for Data Science - Internshi

--- a/data-science.html
+++ b/data-science.html
@@ -49,7 +49,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/drweng/jobs/1796522'>Job Application for Senior Data Scientist at DRW </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/drweng/jobs/1796522'>Job Application for Senior Data Scientist at DRW </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light">Greeley, CO, USA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/878230c6-07c0-433c-9f42-9590602874a4'>Fanatics - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/878230c6-07c0-433c-9f42-9590602874a4'>Fanatics - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/d793f15b-7530-4859-91a6-541fbfe13f0f'>Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/d793f15b-7530-4859-91a6-541fbfe13f0f'>Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -93,7 +93,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://h2oai.applytojob.com/apply/V6k4JUphaX/Sr-Enterprise-Account-Exec-Data-Science-ML-Munich'>Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/V6k4JUphaX/Sr-Enterprise-Account-Exec-Data-Science-ML-Munich'>Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -328,7 +328,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Fraud Junior Data Scientist at The Hut Group.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE?viewed=true'>Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs</a></h5> 
+<h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE?viewed=true'>Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Crisis Text Line is looking for a Data Scientist with experience in Behavioral 
 Science (?Behavioral Data Scientist?) to support our three core operational?...</p>
@@ -337,7 +337,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://talkspace.workable.com/j/A46A942643'>Talkspace - Jobs: Data Scientist, User Behavior - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talkspace.workable.com/j/A46A942643'>Talkspace - Jobs: Data Scientist, User Behavior - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -423,7 +423,7 @@ your application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.
 <p>Jul 16, 2019 ... We are looking for a Data Scientist to develop a revenue generating, predictive, 
 intelligent, learning algorithm. The algorithm will ingest market analytics and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53/apply'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
+<h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53/apply'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Senior Data Scientist (multiple roles). Ottawa, Canada. R&D ? Data Science & 
 Engineering. full-time. Submit your application. Resume/CV. ATTACH RESUME/
@@ -442,7 +442,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/j/0B84C2EB04'>Aginic - Jobs: Data Analytics Consultant / Data Scientist (Melbourne) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/0B84C2EB04'>Aginic - Jobs: Data Analytics Consultant / Data Scientist (Melbourne) - Apply online</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
