Zeta Global Careers - DevOps Engineer. Zeta Global Careers - DevOps Engineer.     0723 - Sr DevOps Engineer at Workforce Source .     0722 - Sr DevOps Engineer at Workforce Source . Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA. MORI Associates, Inc. Careers - Linux Systems Administrator - DevOps - Nasa/JPL. Lifesize, Inc. Careers - DevOps Engineer. Arcadia Power - Jobs: Senior DevOps Engineer - Apply online. DevOps Senior Analyst - Careers at WMP Careers.       IT-Admin / DevOps-Engineer (w/m/d) - INVERS     . Job Application for DevOps Engineer at ReCharge Payments. RecruiterDNA | DevOpsDNA - Job Page. RecruiterDNA | DevOpsDNA - Job Page. Sr. DevOps Engineer | RecruiterDNA | DevOpsDNA - Job Page. Conga Senior DevOps Engineer | SmartRecruiters. Best Western Hotels & Resorts Senior IT Engineer - DevOps | SmartRecruiters. Senior Devops Engineer - h2o.ai - Career Page. Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance). Co-op Software Engineer - DevOps - Nokia Careers. Yapily Ltd DevOps Engineer | SmartRecruiters. Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN. Linux DevOps / WebOps Engineer - RubensteinTech - Career Page. Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN. Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN. Job Application for Senior DevOps Engineer at Cityblock Health. Devops Engineer - Living Goods - Career Page. Avant - Senior Software Engineer, DevOps (Remote Ok). GBM DevOps Lead | SmartRecruiters. iPresence - Jobs: DevOps Engineer, UK REMOTE - Apply online. Senior DevOps Engineer #503444 UK-Leeds. Loanpal Careers - DevOps Engineer. Checkout.com - DevOps Engineer. Curriculum Associates Careers - Senior DevOps Engineer. Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance). DevOps and AWS Infrastructure Engineer - Apply ... - Thematic - Jobs. eHealth Careers - Manager, DevOps. Job Application for Group Mana

--- a/devops.html
+++ b/devops.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zetaglobal/job/ox9Dafwd'>Zeta Global Careers - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zetaglobal/job/ox9Dafwd'>Zeta Global Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -78,13 +78,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://invers.recruitee.com/o/itadmin-devopsengineer-wmd'>
+<h5><a href='https://invers.recruitee.com/o/itadmin-devopsengineer-wmd'>
       IT-Admin / DevOps-Engineer (w/m/d) - INVERS
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/recharge/jobs/4371030002'>Job Application for DevOps Engineer at ReCharge Payments</a></h5> 
+<h5><a href='https://boards.greenhouse.io/recharge/jobs/4371030002'>Job Application for DevOps Engineer at ReCharge Payments</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -128,7 +128,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rubensteintech.applytojob.com/apply/i99mViLD4X/Linux-DevOps-WebOps-Engineer'>Linux DevOps / WebOps Engineer - RubensteinTech - Career Page</a></h5> 
+<h5><a href='https://rubensteintech.applytojob.com/apply/i99mViLD4X/Linux-DevOps-WebOps-Engineer'>Linux DevOps / WebOps Engineer - RubensteinTech - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Our services division, RubensteinTech, is seeking an experienced developer 
 excited by our goal of infrastructure as code to work closely with our product and
@@ -185,7 +185,7 @@ be working as part of a team based in Leeds and help build the infrastructure?..
 <p><span class="badge badge-light">Boston Bangalore Boston</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://thematic.workable.com/j/1B31D22CA4'>DevOps and AWS Infrastructure Engineer - Apply ... - Thematic - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thematic.workable.com/j/1B31D22CA4'>DevOps and AWS Infrastructure Engineer - Apply ... - Thematic - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Alyona has a PhD in NLP and Machine Learning with an international reputation, 
 and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
@@ -198,7 +198,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692319708-cloud-devops-engineer'>4Catalyzer Cloud DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692319708-cloud-devops-engineer'>4Catalyzer Cloud DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -210,7 +210,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artificialsolutions46581.recruiterbox.com/jobs/fk03fby/'>
+<h5><a href='https://artificialsolutions46581.recruiterbox.com/jobs/fk03fby/'>
     DevOps Engineer (Software Development) at Artificial Solutions
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -391,7 +391,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
